// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match customKey snapshot 1`] = `
<div>
  <div>
    <div
      class="overlay-fade-enter-active nut-overlay"
      style="background-color: rgba(0, 0, 0, 0); z-index: 1000; animation-duration: 0.3s;"
    />
    <div
      class="nut-popup-bottom  undefined nut-popup"
      style="z-index: 1000; animation-duration: 0.3s;"
    >
      <div
        class="nut-numberkeyboard "
      >
        <div
          class="nut-numberkeyboard__body"
        >
          <div
            class="nut-numberkeyboard__body__keys"
          >
            <div
              class="key-board-wrapper"
            >
              <div
                class="key"
              >
                <div>
                  1
                </div>
              </div>
            </div>
            <div
              class="key-board-wrapper"
            >
              <div
                class="key"
              >
                <div>
                  2
                </div>
              </div>
            </div>
            <div
              class="key-board-wrapper"
            >
              <div
                class="key"
              >
                <div>
                  3
                </div>
              </div>
            </div>
            <div
              class="key-board-wrapper"
            >
              <div
                class="key"
              >
                <div>
                  4
                </div>
              </div>
            </div>
            <div
              class="key-board-wrapper"
            >
              <div
                class="key"
              >
                <div>
                  5
                </div>
              </div>
            </div>
            <div
              class="key-board-wrapper"
            >
              <div
                class="key"
              >
                <div>
                  6
                </div>
              </div>
            </div>
            <div
              class="key-board-wrapper"
            >
              <div
                class="key"
              >
                <div>
                  7
                </div>
              </div>
            </div>
            <div
              class="key-board-wrapper"
            >
              <div
                class="key"
              >
                <div>
                  8
                </div>
              </div>
            </div>
            <div
              class="key-board-wrapper"
            >
              <div
                class="key"
              >
                <div>
                  9
                </div>
              </div>
            </div>
            <div
              class="key-board-wrapper"
            >
              <div
                class="key"
              >
                <div>
                  .
                </div>
              </div>
            </div>
            <div
              class="key-board-wrapper"
            >
              <div
                class="key"
              >
                <div>
                  0
                </div>
              </div>
            </div>
            <div
              class="key-board-wrapper"
            >
              <div
                class="key"
              >
                <div>
                  x
                </div>
              </div>
            </div>
          </div>
          <div
            class="nut-numberkeyboard__sidebar"
          >
            <div
              class="key-board-wrapper"
            >
              <div
                class="key"
              >
                <img
                  alt=""
                  src="https://img11.360buyimg.com/imagetools/jfs/t1/129395/8/12735/2030/5f61ac37E70cab338/fb477dc11f46056c.png"
                />
              </div>
            </div>
            <div
              class="key-board-wrapper key-board-finish"
            >
              <div
                class="key finish"
              >
                完成
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should match snapshot 1`] = `
<div>
  <div>
    <div
      class="overlay-fade-enter-active nut-overlay"
      style="background-color: rgba(0, 0, 0, 0); z-index: 1000; animation-duration: 0.3s;"
    />
    <div
      class="nut-popup-bottom  undefined nut-popup"
      style="z-index: 1000; animation-duration: 0.3s;"
    >
      <div
        class="nut-numberkeyboard "
      >
        <div
          class="nut-numberkeyboard__body"
        >
          <div
            class="nut-numberkeyboard__body__keys"
          >
            <div
              class="key-board-wrapper"
            >
              <div
                class="key"
              >
                <div>
                  1
                </div>
              </div>
            </div>
            <div
              class="key-board-wrapper"
            >
              <div
                class="key"
              >
                <div>
                  2
                </div>
              </div>
            </div>
            <div
              class="key-board-wrapper"
            >
              <div
                class="key"
              >
                <div>
                  3
                </div>
              </div>
            </div>
            <div
              class="key-board-wrapper"
            >
              <div
                class="key"
              >
                <div>
                  4
                </div>
              </div>
            </div>
            <div
              class="key-board-wrapper"
            >
              <div
                class="key"
              >
                <div>
                  5
                </div>
              </div>
            </div>
            <div
              class="key-board-wrapper"
            >
              <div
                class="key"
              >
                <div>
                  6
                </div>
              </div>
            </div>
            <div
              class="key-board-wrapper"
            >
              <div
                class="key"
              >
                <div>
                  7
                </div>
              </div>
            </div>
            <div
              class="key-board-wrapper"
            >
              <div
                class="key"
              >
                <div>
                  8
                </div>
              </div>
            </div>
            <div
              class="key-board-wrapper"
            >
              <div
                class="key"
              >
                <div>
                  9
                </div>
              </div>
            </div>
            <div
              class="key-board-wrapper"
            >
              <div
                class="key lock"
              >
                <img
                  alt=""
                  src="https://img11.360buyimg.com/imagetools/jfs/t1/146371/38/8485/738/5f606425Eca239740/14f4b4f5f20d8a68.png"
                />
              </div>
            </div>
            <div
              class="key-board-wrapper"
            >
              <div
                class="key"
              >
                <div>
                  0
                </div>
              </div>
            </div>
            <div
              class="key-board-wrapper"
            >
              <div
                class="key delete"
              >
                <img
                  alt=""
                  src="https://img11.360buyimg.com/imagetools/jfs/t1/129395/8/12735/2030/5f61ac37E70cab338/fb477dc11f46056c.png"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
